<resources>
    <string name="app_name">PdaApp</string>
    <string name="title_activity_bind">BindActivity</string>

    <string name="title_bar_msg_text">门牌信息</string>
    <string name="btn_commit_text">提交</string>
    <string name="fetch_chip_fail">读取芯片失败</string>
    <string name="scan_success">扫描成功</string>
    <string name="scan_fail">扫描失败</string>
    <string name="scan_not">不是本系统的短链接</string>

    <string name="main_activity_scan">请先扫描门牌二维码</string>

    <string name="bind_activity_title_content">芯片绑定</string>
    <string name="bind_activity_short_link">短链接：</string>
    <string name="bind_activity_chip">芯片id：</string>
    <string name="bind_activity_scan">扫描</string>
    <string name="bind_activity_fetch">读取</string>
    <string name="bind_activity_commit">绑定</string>
    <string name="bind_activity_change">修改</string>
    <string name="bind_activity_short_link_empty">短链接不能为空</string>
    <string name="bind_activity_chip_empty">芯片id不能为空</string>
    <string name="bind_activity_bind_success">绑定成功</string>
    <string name="bind_activity_bind_fail">绑定失败</string>
    <string name="bind_activity_short_link_bind">该短链接已绑定门牌</string>

    <string name="web_activity_short_link_unuse">该短链接未被绑定</string>
    <string name="web_activity_short_link_used">该短链接已被使用</string>
    <string name="web_activity_need_data">该短链接未录入数据</string>
    <string name="web_activity_not_bind_short_link">该短链接已录入过数据，是否需要绑定芯片</string>
    <string name="web_activity_not_bind_short_link_normal">录入数据成功，是否需要绑定芯片</string>
    <string name="web_activity_not_bind_short_link_refresh">匹配数据成功，是否需要绑定芯片</string>
    <string name="web_activity_not_go">否</string>
    <string name="web_activity_go">是</string>
    <string name="web_activity_dialog_title">提示</string>

    <string name="msg_sex_text">性别：</string>
    <string name="msg_id_text">门牌号：</string>
    <string name="msg_phone_text">电话：</string>
    <string name="msg_mobile_text">手机：</string>
    <string name="msg_address_text">地址：</string>
    <string name="msg_community_text">社区：</string>
    <string name="msg_username_text">户主：</string>
    <string name="msg_people_number_text">人数：</string>
    <string name="msg_category_text">类别：</string>
    <string name="msg_gloriousArmy_text">光荣军属：</string>
    <string name="msg_fiveGuarantees_text">五保户：</string>
    <string name="msg_beekeepingProfessionals_text">养蜂专业户：</string>
    <string name="msg_fireInspectionPoint_text">消防巡查点：</string>
    <string name="msg_gridInspectionPoint_text">网格巡查点：</string>
    <string name="msg_breedingSpecialist_text">种植专业户：</string>
    <string name="msg_technologyDemonstration_text">科技示范户：</string>
    <string name="msg_precisionPoverty_text">精准扶贫户：</string>
    <string name="msg_civilizationHouseholds_text">文明户：</string>
    <string name="msg_helper_text">帮扶负责人：</string>
    <string name="msg_party_member_text">党员户：</string>
    <string name="msg_agriculturalProductsInformation_text">农特产信息：</string>
    <string name="msg_get_information_fail">获取门牌信息失败</string>
    <string name="msg_get_information_fail_2">门牌未被使用</string>
    <string name="msg_get_information_request">请先获取门牌信息</string>
    <string name="msg_get_chip_id_request">请读取门牌ID</string>
    <string name="msg_update_success">修改成功</string>
    <string name="msg_update_fail">修改失败</string>

    <string name="report_title_content">报障</string>
    <string name="report_address">门牌短链接：</string>
    <string name="report_chip">芯片ID：</string>
    <string name="report_fetch">读取</string>
    <string name="report_scan">扫描</string>
    <string name="report_empty_toast">请扫描二维码或读取门牌ID</string>
    <string name="report_success">报障成功</string>
    <string name="report_fail">报障失败</string>

    <string name="rfid_read_success">读取芯片成功</string>
    <string name="rfid_read_fail">读取芯片失败，请重新读取</string>
</resources>
